# dranjan.github.io

./: .gitignore  Gemfile  README.md  _config.yml  about.md  convert.sh  fix-md.sed  generate-nb.sh  hilbert.py  index.html  index.md  math-art.md  news.md  run.py
.github/workflows/: pages.yml
_includes/: head_custom.html  nav_footer_custom.html
_nb/: .gitignore  README.md  convert.sh  favicon.md  init.sh  pyproject.toml
_nb/mdformat_jekyll_math/: __init__.py  plugin.py
_sass/color_schemes/: darshsrad.scss  light-fira.scss
_sass/custom/: custom.scss
_scripts/: fetch-assets.sh  generate-nb.sh  katex_path.rb
nb/: Favicon.py  README.md  convert.sh  favicon.py  pyproject.toml
