[project]
name = "darshsrad-nb"
version = "0.1.0"
description = "Notebooks for darshsrad.com"
authors = [
    {name = "Darsh Ranjan", email = "dranjan@berkeley.edu"},
]
dependencies = [
    "jekyllnb",
    "jupyter",
    "jupytext",
    "lxml[html_clean]",
    "markdown-it-py",
    "matplotlib",
    "mdformat",
    "mdformat-frontmatter",
    "mdit-py-plugins",
    "numpy",
    "pillow",
    "scipy",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "GPL-3.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.entry-points."mdformat.parser_extension"]
"jekyll_math" = "mdformat_jekyll_math"
